[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Interactive/ColorPatternPuzzle/ColoredButton/colored_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://World/Interactive/ColorPatternPuzzle/ColoredButton/colored_button.png" type="Texture" id=2]
[ext_resource path="res://World/Interactive/ColorPatternPuzzle/ColoredButton/ColoredButton.gd" type="Script" id=3]
[ext_resource path="res://Shadows/light_shadow.png" type="Texture" id=4]
[ext_resource path="res://World/Interactive/ColorPatternPuzzle/ColoredButton/button_press.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "pressed",
"speed": 5.0
} ]

[node name="ColoredButton" type="Area2D"]
position = Vector2( 15, 0 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Button" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "pressed"

[node name="PressedTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ActivationLight" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 4 )
energy = 0.5

[node name="PressAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_ColoredButton_body_entered"]
[connection signal="timeout" from="PressedTimer" to="." method="_on_PressedTimer_timeout"]
